packages/kit/test/apps/basics/src/routes/load/invalidation/invalidate-then-goto/+layout.server.js
/** @type {import('./$types').LayoutServerLoad} */
export function load({ depends }) {
	depends('invalidate-depends:goto');
	return {
		layoutDate: new Date().getTime()
	};
}
